--- a/Portfolio/css/timeline.css
+++ b/Portfolio/css/timeline.css
@@ -129,3 +129,18 @@
   padding-bottom: 0px;   
   border-width: 0px; 
 } 
+
+
+@media (max-width: 480px){
+  .timeline{
+    row-gap: 14px;
+  }
+
+  .tl-title{
+    font-size: 1rem;
+  }
+
+  .tl-panel > .tl-panel-inner{
+    padding: 10px;
+  }
+}
